[package]
name = "tokio-rustls"
version = "0.7.1"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/tokio-rustls"
homepage = "https://github.com/quininer/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]

[badges]
travis-ci = { repository = "quininer/tokio-rustls" }
appveyor = { repository = "quininer/tokio-rustls" }

[dependencies]
rustls = "0.13"
webpki = "0.18.1"
futures-preview = { version = "0.3.0-alpha.3", optional = true }
pin-utils = { version = "0.1.0-alpha.1", optional = true }
tokio = { version = "0.1.6", optional = true }

[dev-dependencies]
tokio = "0.1.6"

[features]
default = [ "tokio" ]
unstable-futures = [
	"futures-preview",
	"pin-utils",
#	"tokio/unstable-futures"
]
