[package]
name = "futures-rustls"
version = "0.12.0-alpha"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/futures-rustls"
homepage = "https://github.com/quininer/futures-rustls"
documentation = "https://docs.rs/futures-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Future using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "quininer/futures-rustls" }
appveyor = { repository = "quininer/futures-rustls" }

[dependencies]
smallvec = "0.6"
futures = { package = "futures-preview", version = "0.3.0-alpha.16" }
rustls = "0.15"
webpki = "0.19"

[features]
early-data = []

[dev-dependencies]
romio = "0.3.0-alpha.8"
lazy_static = "1"
webpki-roots = "0.16"
